[package]
name = "bn45pvpstats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bps = { path = "../tango/bps" }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
env_logger = "0.9"
hex = "0.4"
hyper = { version = "0.14", features = ["stream"] }
itertools = "0.10"
log = "0.4"
mgba = { path = "../tango/mgba" }
prost = "0.10"
reqwest = { version = "0.11", features = ["stream", "json"] }
routerify = "3.0"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "tls-rustls", "time", "postgres" ] }
tango-dataview = { path = "../tango/tango-dataview" }
tango-filesync = { path = "../tango/tango-filesync" }
tango-gamedb = { path = "../tango/tango-gamedb" }
tango-pvp = { path = "../tango/tango-pvp" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.5"
uuid = { version = "1.1", features = ["v4"] }
